# guidance_uart

./: CMakeLists.txt  CMakeLists.txt~  LICENSE  README.md  baby  log.txt  package.xml  package.xml~
include/: serial.h
launch/: uart_port.launch  uart_port.launch~
msg/: Motion.msg  Motion.msg~
src/: crc16.h.gch  main.cpp  main.cpp~  protocal_uart_sdk.cpp  serial.cpp  serial.cpp~
