<?xml version="1.0"?>
<package>
  <name>guidance_uart</name>
  <version>0.0.1</version>
  <description>The Guidance UART Ros package</description>

  <maintainer email="jimchaaa@todo.todo">jim</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>

  <export>
  </export>
</package>
